# core

./: .gitignore  .hgignore  CMakeLists.txt  README.md
src/framework/: CMakeLists.txt
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: Grid.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Policies/: MemoryManagement.cpp
src/framework/Utilities/: ByteConverter.h  Callback.h  EventProcessor.cpp  EventProcessor.h  LinkedList.h  TypeList.h  UnorderedMap.h
src/game/: AccountMgr.cpp  AccountMgr.h  AddonHandler.cpp  AddonHandler.h  AntiCheat.cpp  AntiCheat.h  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundWS.cpp  BattleGroundWS.h  CMakeLists.txt  Camera.cpp  Camera.h  Cell.h  CellImpl.h  (+267 more)
src/game/AI/: CombatAI.cpp  CombatAI.h  CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h  CreatureEventAI.cpp  CreatureEventAI.h  CreatureEventAIMgr.cpp  CreatureEventAIMgr.h  GuardAI.cpp  GuardAI.h  PassiveAI.cpp  PassiveAI.h  PetAI.cpp  PetAI.h  PlayerAI.cpp  PlayerAI.h  ReactorAI.cpp  ReactorAI.h  ScriptedEscortAI.cpp  ScriptedEscortAI.h  ScriptedFollowerAI.cpp  ScriptedFollowerAI.h  ScriptedGossip.h  ScriptedInstance.h  TotemAI.cpp  TotemAI.h  UnitAI.cpp  UnitAI.h
src/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/game/Battlegrounds/: BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundWS.cpp  BattleGroundWS.h
src/game/Chat/: Channel.cpp  Channel.h  ChannelMgr.h  Chat.cpp  Chat.h
src/game/Commands/: Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp
src/game/Database/: DBCEnums.h  DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h  Debugcmds.cpp
src/game/Group/: Group.cpp  Group.h  GroupRefManager.h  GroupReference.cpp  GroupReference.h
src/game/Guild/: Guild.cpp  Guild.h  GuildMgr.cpp  GuildMgr.h
src/game/Handlers/: AddonHandler.cpp  AddonHandler.h  ArenaTeamHandler.cpp  AuctionHouseHandler.cpp  BattleGroundHandler.cpp  ChannelHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  CombatHandler.cpp  DuelHandler.cpp  GMTicketHandler.cpp  GroupHandler.cpp  GuildHandler.cpp  ItemHandler.cpp  LFGHandler.cpp  LootHandler.cpp  MailHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  NPCHandler.h  PetHandler.cpp  PetitionsHandler.cpp  QueryHandler.cpp  QuestHandler.cpp  SkillHandler.cpp  SpellHandler.cpp  TaxiHandler.cpp  TradeHandler.cpp  VoiceChatHandler.cpp
src/game/Maps/: Cell.h  CellImpl.h  GridDefines.h  GridMap.cpp  GridMap.h  GridNotifiers.cpp  GridNotifiers.h  GridNotifiersImpl.h  GridStates.cpp  GridStates.h  InstanceData.cpp  InstanceData.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  MapRefManager.h  MapReference.h  MoveMap.cpp  MoveMap.h  MoveMapSharedDefines.h  Path.h  PathFinder.cpp  PathFinder.h  ZoneScript.h
src/game/Movement/: ConfusedMovementGenerator.cpp  ConfusedMovementGenerator.h  FleeingMovementGenerator.cpp  FleeingMovementGenerator.h  FollowerRefManager.h  FollowerReference.cpp  FollowerReference.h  HomeMovementGenerator.cpp  HomeMovementGenerator.h  IdleMovementGenerator.cpp  IdleMovementGenerator.h  MotionMaster.cpp  MotionMaster.h  MovementGenerator.cpp  MovementGenerator.h  MovementGeneratorImpl.h  PointMovementGenerator.cpp  PointMovementGenerator.h  RandomMovementGenerator.cpp  RandomMovementGenerator.h  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  WaypointMgr.cpp  WaypointMgr.h  WaypointMovementGenerator.cpp  WaypointMovementGenerator.h
src/game/Objects/: Bag.cpp  Bag.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  DynamicObject.cpp  DynamicObject.h  GameObject.cpp  GameObject.h  Item.cpp  Item.h  ItemPrototype.h  Object.cpp  Object.h  Pet.cpp  Pet.h  Player.cpp  Player.h  TemporarySummon.cpp  TemporarySummon.h  Totem.cpp  Totem.h  Unit.cpp  Unit.h  UpdateData.cpp  UpdateData.h  UpdateFields.h  UpdateMask.h
src/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPEP.cpp  OutdoorPvPEP.h  OutdoorPvPHP.cpp  OutdoorPvPHP.h  OutdoorPvPImpl.h  OutdoorPvPMgr.cpp  OutdoorPvPMgr.h  OutdoorPvPNA.cpp  OutdoorPvPNA.h  OutdoorPvPSI.cpp  OutdoorPvPSI.h  OutdoorPvPTF.cpp  OutdoorPvPTF.h  OutdoorPvPZM.cpp  OutdoorPvPZM.h
src/game/PlayerBots/: CombatBotBaseAI.cpp  CombatBotBaseAI.h  PartyBotAI.cpp  PartyBotAI.h  PlayerBotAI.cpp  PlayerBotAI.h  PlayerBotMgr.cpp
src/game/Protocol/: Opcodes.cpp  Opcodes.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp  WorldSocketMgr.h
src/game/Spells/: Spell.cpp  Spell.h  SpellAuraDefines.h  SpellAuras.cpp  SpellAuras.h  SpellEffects.cpp  SpellMgr.cpp  SpellMgr.h
src/game/Threat/: ThreatManager.cpp  ThreatManager.h
src/game/Transports/: Transports.cpp  (+1 more)
src/scripts/: CMakeLists.txt  ScriptLoader.cpp  ScriptLoader.h  ScriptMgr.cpp  ScriptMgr.h  hellgroundscripts.rc
src/shared/: ByteBuffer.h  CMakeLists.txt  Common.cpp  Common.h  DelayExecutor.cpp  DelayExecutor.h  LockedQueue.h  LockedVector.h  Log.cpp  Log.h  PosixDaemon.cpp  PosixDaemon.h  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  ServiceWin32.h  SystemConfig.h  Threading.cpp  Threading.h  Timer.h  Util.cpp  Util.h  WheatyExceptionReport.cpp  WorldPacket.h  revision.h
(+1097 files in other folders)
